bugfix:- fixed the overlapping content and some design updates
fixed the overlapping content and some design updates

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Scada:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap');
 
 
 :root {
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'Scada', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     margin: 0;
 }
 
@@ -18,7 +18,7 @@ nav {
 
 .title {
     color: black;
-    padding: 2rem;
+    padding: 1rem;
     font-size: 2rem;
 }
 
@@ -26,10 +26,11 @@ main {
     max-width: var(--width-break);
     margin: auto;
     padding: 1rem;
+    height: 70vh;
 }
 
 textarea {
-    width: 100%;
+    width: 90%;
     height: 10vh;
     margin: 1rem;
     padding: 1rem;
@@ -50,7 +51,6 @@ button {
 #output {
     border: 1px solid black;
     height: 10vh;
-    width: 100%;
     margin: 1rem;
     padding: 1rem;
 }
@@ -67,11 +67,15 @@ footer {
 
 footer p {
     max-width: var(--width-break);
-    padding-top: 1rem;
     margin: auto;
-    font-size: 1.35rem;
+    padding-top: 1rem;
 }
 
 footer span{
     font-size: xx-large;
+}
+
+.end-credits {
+    margin-top: 0.5rem;
+    font-weight: bold;
 }
